# algs

./: CMakeLists.txt  README.md  main.cpp
cli/: main.cpp
searching/: binary_search.hpp  linear_search.hpp  searching_algorithms.hpp
sorting/: bubble_sort.hpp  insertion_sort.hpp  selection_sort.hpp  sorting_algorithms.hpp
